Fix usage of non-existent 'ms-text-align'

--- a/packages/experiments/src/components/signals/SignalField.scss
+++ b/packages/experiments/src/components/signals/SignalField.scss
@@ -19,6 +19,6 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  @include ms-text-align(left);
+  @include text-align(left);
   flex: 1 1 auto;
 }
